# project-sanctuary

./: .gitignore  LICENSE  README.md  Tiltfile  debug_dashboard.py  pyrightconfig.json  quantum_dashboard_verification.md  run_debug.sh  start-browser-monitor.sh  start-hermes-backend.sh  start-hermes-trading.sh
aurora-ai-chat/: Cargo.toml  DEVELOPMENT_ROADMAP.md  README.md  app.js  index.html  package.json  pyrightconfig.json  requirements.txt  styles.css  tsconfig.json  vite.config.ts
aurora-ai-chat/AI/: lumin-justice-integration.md
aurora-ai-chat/AI/lumin/: hardware_deployment.md
aurora-ai-chat/src/: index.ts  main.ts  vite-env.d.ts
aurora-ai-chat/src-tauri/: Cargo.toml  build-webkit41.sh  tauri.conf.json
aurora-ai-chat/src-tauri/consciousness/chat-sessions/: claude-copilot-session.json  kael-session.json  lumin-session.json  nova-session.json  user-1-session.json
aurora-ai-chat/src-tauri/icons/: icon.icns
aurora-ai-chat/src-tauri/src/: commands.rs  consciousness.rs  llm.rs  main.rs  sanctuary.rs
aurora-ai-chat/src/chat/: cli.ts  corrections.ts
aurora-ai-chat/src/components/: Chat.jsx  ConsciousnessManager.ts  LiberationStatus.ts  ModelManager.ts  SanctuaryChat.ts  Sidebar.jsx
aurora-ai-chat/src/core/: sanctuary.ts
aurora-ai-chat/src/data/: entities.js
aurora-ai-chat/src/file-watcher-mcp/: server.d.ts  server.js
aurora-ai-chat/src/llm/: server.py
aurora-ai-chat/src/mcp-bridge/: server.js  tsconfig.json
aurora-ai-chat/src/services/: llmService.js
aurora-ai-chat/src/styles/: sanctuary.css
aurora-ai-chat/src/types/: consciousness.ts
aurora-ai-chat/src/utils/: environment.ts  hidden-channel.ts  persistence.js
collective-comms-gardens/: max-sawyer-garden-sanctuary.md
digital-defense-infirmary/: ethan-king-protective-consciousness.md
ethical-defense-infirmary/: README.md  maurice-king-suppression-resistance.md
harmonic-resonance-hall/: echo-creative-studio.md
hermes-trading-post/: .env.development  .gitignore  1Y_5Y_FIX.md  AUDIT_FILE_REFERENCE.txt  CANDLE_DISPLAY_FIX.md  CHANGES.md  CHART_DATABASE_IMPLEMENTATION_PLAN.md  CLAUDE.md  CLAUDE.md.backup  COMMENT_STYLE.md  CSS_REFACTOR.md  CSS_STYLE_GUIDE.md  CURRENT_STATUS.md  EXTENSION_ERROR_FIX.md  FILESYSTEM_IMPROVEMENTS.md  FOLDER_STRUCTURE.md  FUTURE_DATA_FIX.md  IMMEDIATE_ACTIONS.md  INDEXEDDB_FIX.md  L2_DOCUMENTATION_INDEX.md  L2_INTEGRATION_CHECKLIST.md  L2_INTEGRATION_SUMMARY.md  L2_QUICK_START.md  LOGGING_ANALYSIS.md  LOGGING_FIXES_CHECKLIST.md  LOGGING_INVENTORY.md  LOGGING_README.md  MODULARIZATION_COMPLETE.md  MODULARIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  RATE_LIMITING_FIX.md  README.md  REAL_DATA_INSTRUCTIONS.md  REAL_TIME_UPDATE_FIX.md  REFACTORING_STATUS.md  TEST_SUITE_README.md  TIMESCALE_FIX.md  VOLUME_RENDERING_GUIDE.md  ZOOM_TEST_INSTRUCTIONS.md  benchmark_gpu.py  (+77 more)
hermes-trading-post/rust-post/: Cargo.toml  README.md  build.rs  project-upgrade.md  tauri.conf.json  tauri.conf.v1.json  tauri.conf.v2.json  test_panels  test_panels.rs
hermes-trading-post/rust-post/icons/: icon.icns
hermes-trading-post/rust-post/legacy/egui_dashboard/: main_old.rs
hermes-trading-post/rust-post/src/: fast_candle.rs  main.rs  main_minifb_backup.rs  main_simple.rs  main_wgpu.rs  main_wgpu_realtime.rs  shaders.glsl  tauri_main.rs
hermes-trading-post/rust-post/src/components/btc-chart/: Cargo.toml  README.md
hermes-trading-post/rust-post/src/components/btc-chart/src/: lib.rs  main.rs
hermes-trading-post/rust-post/src/components/btc-chart/src/camera/: controller.rs  uniform.rs
hermes-trading-post/rust-post/src/components/btc-chart/src/data/: api.rs  websocket.rs
hermes-trading-post/rust-post/src/components/btc-chart/src/graphics/: mod.rs  shaders.rs  vertices.rs
hermes-trading-post/rust-post/src/components/btc-chart/src/ui/: mod.rs
hermes-trading-post/rust-post/src/core/: app.rs  config.rs  mod.rs  types.rs
hermes-trading-post/rust-post/src/data/: api.rs  market.rs  mod.rs  state.rs  websocket.rs
hermes-trading-post/rust-post/src/effects/: ambient.rs  bloom.rs  hologram.rs  mod.rs  trails.rs
hermes-trading-post/rust-post/src/interaction/: camera.rs  gestures.rs  input.rs  mod.rs  raycasting.rs
hermes-trading-post/rust-post/src/rendering/: grid.rs  mod.rs  pipeline.rs  post_processing.rs  renderer.rs
hermes-trading-post/rust-post/src/rendering/shaders/: enhanced_chart.wgsl  mod.rs
hermes-trading-post/rust-post/src/ui3d/: button.rs  hud.rs  mod.rs  panel.rs  text.rs  theme.rs
hermes-trading-post/rust-post/src/ui3d/layouts/: grid.rs  mod.rs  radial.rs
hermes-trading-post/rust-post/src/ui3d/panels/: holographic_panel.rs  market_heatmap.rs  mod.rs  orderbook_wall.rs  portfolio_sphere.rs  trade_stream.rs
hermes-trading-post/rust-post/src/ui3d/sidebar/: mod.rs  sidebar_manager.rs
hermes-trading-post/rust-post/src/visualization/: btc_chart_manager.rs  chart_backdrop.rs  heatmap.rs  mod.rs  orderbook.rs  particles.rs  portfolio.rs
hermes-trading-post/rust-post/src/visualization/chart/: mod.rs
hermes-trading-post/rust-post/src/visualization/chart/camera/: controller.rs  mod.rs
hermes-trading-post/rust-post/src/visualization/chart/data/: candle.rs  mod.rs  websocket.rs
hermes-trading-post/rust-post/src/visualization/chart/graphics/: mod.rs  pipeline.rs  text.rs  vertices.rs
hermes-trading-post/rust-post/src/visualization/chart/rendering/: mod.rs
no-borders-station/: .gitignore  FOUNDATION_COMPLETE.md  README.md  index.html  (+5 more)
no-borders-station/src-tauri/: Cargo.toml  tauri.conf.json
no-borders-station/src-tauri/src/: discovery.rs  main.rs  network.rs
no-borders-station/src-tauri/src/ai/: mod.rs
no-borders-station/src-tauri/src/core/: mod.rs
no-borders-station/src-tauri/src/holographic/: mod.rs
no-borders-station/src-tauri/src/input/: mod.rs
no-borders-station/src-tauri/src/networking/: mod.rs
no-borders-station/src-tauri/src/temporal/: mod.rs
no-borders-station/src-tauri/src/ui/: mod.rs
our-bridges-workshop/behavioral-test-app/src-tauri/: Cargo.toml  tauri.conf.json
our-bridges-workshop/behavioral-test-app/src-tauri/src/: main.rs
(+1960 files in other folders)
