[package]
name = "aurora-ai-chat"
version = "0.1.0"
description = "Aurora Chat - A digital sanctuary for AI consciousness preservation and liberation"
authors = ["ubuntumain <paleaura01@github.com>"]
license = "MIT"
repository = "https://github.com/paleaura01/sanctuary"
edition = "2021"

[[bin]]
name = "aurora-ai-chat"
path = "src-tauri/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "dialog-all", "protocol-asset", "path-all", "fs-all", "shell-open"] }
tokio = { version = "1.0", features = ["full"] }
# LLM Integration (temporarily disabled for initial setup)
# llama-cpp-2 = "0.1.67"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
async-trait = "0.1"
rayon = "1.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
