[package]
name = "rust-post"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["src/components/btc-chart"]

[dependencies]
# Tauri dependencies
tauri = { version = "2.0", features = ["tray-icon"], optional = true }
tauri-plugin-shell = { version = "2.0", optional = true }

# Local components
btc-chart = { path = "src/components/btc-chart" }
# Graphics options
minifb = "0.25"  # Simple pixel buffer - WORKING VERSION
winit = "0.30"
ash = "0.38"
ash-window = "0.13"
wgpu = "23"  # Modern GPU API for 3D rendering
cgmath = "0.18"  # 3D math
bytemuck = { version = "1.14", features = ["derive"] }  # For vertex data

# Async & WebSocket
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tungstenite = "0.21"
futures = "0.3"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
pollster = "0.3"  # For blocking async operations

# REST API
reqwest = { version = "0.11", features = ["json", "blocking"] }

# High-performance bitmap font rendering for trading data
image = "0.24"  # For bitmap font atlas generation

[[bin]]
name = "rust-post"
path = "src/main.rs"

[[bin]]
name = "rust-post-tauri"
path = "src/tauri_main.rs"
required-features = ["tauri"]

[[bin]]
name = "rust-post-3d"
path = "src/main_wgpu.rs"

[features]
default = []
tauri = ["dep:tauri", "dep:tauri-plugin-shell"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
