[package]
name = "rust-post"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Graphics and windowing
wgpu = "23.0"
winit = "0.30"
bytemuck = { version = "1.14", features = ["derive"] }
cgmath = "0.18"
pollster = "0.3"
image = "0.24"

# Networking
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tungstenite = "0.21"
reqwest = { version = "0.11", features = ["json", "blocking"] }
futures-util = "0.3"

# Additional dependencies
rand = "0.8"
anyhow = "1.0"

# UI (optional, for gradual migration)
egui = { version = "0.27", optional = true }
eframe = { version = "0.27", optional = true }

[features]
default = []
legacy-ui = ["egui", "eframe"]

[[bin]]
name = "rust-post"
path = "src/main.rs"
