[package]
name = "btc-chart"
version = "0.1.0"
edition = "2021"

[dependencies]
# Graphics and rendering
wgpu = "23"
winit = "0.30"
bytemuck = { version = "1.4", features = ["derive"] }
cgmath = "0.18"
image = "0.24"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"

# WebSocket and networking
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"

[features]
default = []

[[bin]]
name = "btc-chart"
path = "src/main.rs"